# workshop_azure

./: README.md  anotações.txt  backup_projeto.py  index.html  pyproject.toml
