[project]
name = "workshop-azure"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheusinhofs",email = "matheusfs117@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "azure-storage-blob (>=12.27.1,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
